Scrollbar css fix #2.

--- a/styles/style.css
+++ b/styles/style.css
@@ -81,7 +81,7 @@ tr.highlighted td {
 .container::-webkit-scrollbar-thumb {
   border-radius: 0 12px 12px 0;
   background: #f51400;
-  box-shadow: inset 1px 0px 5px #ff5749;
+  box-shadow: inset 3px 0 3px #ff5749;
 }
 
 .container::-webkit-scrollbar-track {
